--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,6 @@
 REACT_APP_KAKAO_REST_API_KEY=1e14c1ce9624b50f4764b722af4bed43
 REACT_APP_REDIRECT_URI=http://localhost:3000/kakao/callback
 REACT_APP_API_BASE_URL=http://localhost:8080
+
+# REACT_APP_REDIRECT_URI=http://3.34.183.161:3000/kakao/callback
+# REACT_APP_API_BASE_URL=http://3.34.183.161:8080
