--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@react-google-maps/api": "^2.19.0",
+    "lucide-react": "^0.428.0"
   },
   "scripts": {
     "start": "react-scripts start",
